[gd_scene load_steps=17 format=3 uid="uid://dqmpobmm6i54k"]

[ext_resource type="Script" path="res://SCRIPTS/slot_machine.gd" id="1_5tkjj"]
[ext_resource type="Texture2D" uid="uid://cqwskxd4m2v8t" path="res://SPRITES/gambling.png" id="1_jlrnt"]
[ext_resource type="Texture2D" uid="uid://b6v8bhnwmhul8" path="res://SPRITES/light.webp" id="3_flboi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jlytx"]
atlas = ExtResource("1_jlrnt")
region = Rect2(33, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqxek"]
atlas = ExtResource("1_jlrnt")
region = Rect2(66, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3csja"]
atlas = ExtResource("1_jlrnt")
region = Rect2(99, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_crqf0"]
atlas = ExtResource("1_jlrnt")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2hsm"]
atlas = ExtResource("1_jlrnt")
region = Rect2(132, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkvvv"]
atlas = ExtResource("1_jlrnt")
region = Rect2(165, 0, 33, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_y4ia0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlytx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqxek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3csja")
}],
"loop": true,
"name": &"gamble",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_crqf0")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2hsm")
}],
"loop": true,
"name": &"lose",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkvvv")
}],
"loop": true,
"name": &"win",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ve8f"]
size = Vector2(32, 31.6667)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cdqg1"]
radius = 11.0
height = 70.0

[sub_resource type="Curve" id="Curve_xkk5f"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_7p260"]
curve = SubResource("Curve_xkk5f")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rb3mc"]
particle_flag_disable_z = true
angle_min = -180.0
angle_max = 180.0
direction = Vector3(0, -1, 0)
initial_velocity_min = 128.0
initial_velocity_max = 200.0
angular_velocity_min = -360.0
angular_velocity_max = 360.0
gravity = Vector3(0, 98, 0)
damping_min = 32.0
damping_max = 64.0
scale_min = 4.0
scale_max = 8.0
scale_curve = SubResource("CurveTexture_7p260")
color = Color(1, 1, 0, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ga047"]
particle_flag_disable_z = true
angle_min = -180.0
angle_max = 180.0
direction = Vector3(0, -1, 0)
spread = 180.0
initial_velocity_min = 128.0
initial_velocity_max = 200.0
angular_velocity_min = -360.0
angular_velocity_max = 360.0
gravity = Vector3(0, 0, 0)
damping_min = 96.0
damping_max = 129.0
scale_min = 4.0
scale_max = 8.0
scale_curve = SubResource("CurveTexture_7p260")
color = Color(0, 0, 0, 1)

[node name="SlotMachine" type="Node2D"]
script = ExtResource("1_5tkjj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_y4ia0")
animation = &"idle"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1, -1.5)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_0ve8f")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 48)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_cdqg1")

[node name="winPart" type="GPUParticles2D" parent="."]
z_index = -1
emitting = false
amount = 32
process_material = SubResource("ParticleProcessMaterial_rb3mc")
lifetime = 3.0
one_shot = true
preprocess = 0.2
explosiveness = 0.75

[node name="losePart" type="GPUParticles2D" parent="."]
z_index = -1
emitting = false
amount = 32
process_material = SubResource("ParticleProcessMaterial_ga047")
lifetime = 3.0
one_shot = true
preprocess = 0.2
explosiveness = 0.75

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 0.966667, 0, 1)
energy = 0.33
texture = ExtResource("3_flboi")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
